objects/Contact.object
<CustomObject>
    <fields>
        <fullName>AC_Home_Display_Yesterday_Location_Share__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Checked indicates that yesterdays location share will display on the home page. Unchecked indicates that it will be hidden.</description>
        <inlineHelpText>Checked indicates that yesterdays location share will display on the home page. Unchecked indicates that it will be hidden.</inlineHelpText>
        <label>(DEPRECATE) Yesterday Location Share</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AC_Home_Location_Address_Display__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Checked indicates that an address will show as opposed to the location name. Unchecked indicates that only the address will show (on the community home page / yesterday share component) 
https://accel-entertainment.monday.com/boards/286658657/pulses/294459025</description>
        <inlineHelpText>Checked indicates that an address will display for your location on the Home page / Previous day for location share chart. Unchecked indicates a DBA Name will display</inlineHelpText>
        <label>(DEPRECATE) Display Location Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Name_Text__c</fullName>
        <description>text field for account name</description>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name (Text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_RM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>not on any layouts
updated via a flow
used for the email alert that goes out to RM&apos;s when a community contact is created</description>
        <label>Account RM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Acquisition__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Acquisition</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amusement_Operator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Amusement Operator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Background_Check_Completed__c</fullName>
        <label>Background Check Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CaseSafeId__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CaseSafeId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Community Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Community_Terms_Accepted_Date__c</fullName>
        <description>The Date the user clicked accept after reading the Terms of Service in communities.</description>
        <inlineHelpText>The Date the user clicked accept after reading the Terms of Service in communities.</inlineHelpText>
        <label>Community Terms Accepted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contact_PO_Designation__c</fullName>
        <inlineHelpText>PO Designation is based on the Contact Type and Primary Sales Agent Type</inlineHelpText>
        <label>Contact PO Designation</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <label>xContact Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Agent</fullName>
                </value>
                <value>
                    <fullName>Partner Operator</fullName>
                </value>
                <value>
                    <fullName>Amusement Operator</fullName>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_UType__c</fullName>
        <description>Type of the Contact</description>
        <label>Contact Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Agent</fullName>
                </value>
                <value>
                    <fullName>Acquisition</fullName>
                </value>
                <value>
                    <fullName>Partner Operator</fullName>
                </value>
                <value>
                    <fullName>Amusement Operator</fullName>
                </value>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>Terminal Operator</fullName>
                </value>
                <value>
                    <fullName>Delisted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_Not_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Mail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employee_Role__c</fullName>
        <label>Employee Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BDM</fullName>
                </value>
                <value>
                    <fullName>RM</fullName>
                </value>
                <value>
                    <fullName>Executive</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IGB_Email_Address__c</fullName>
        <label>IGB Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>IGB_Email_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IGB Email Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Trade Association account record types only. Accessibility provided only via the Trade Associations Access permission set.</description>
        <inlineHelpText>Key Contact for Trade Association accounts.</inlineHelpText>
        <label>Key Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>License_Expiration_Date__c</fullName>
        <label>License Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mail_Merge_Recipient__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mail Merge Recipient</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Non_Soliciting_Sales_Agent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non-Soliciting Sales Agent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Professional_Roles__c</fullName>
        <inlineHelpText>(lawyer, accountant, bar owner, town mayor, etc.)</inlineHelpText>
        <label>Other Professional Roles</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Designation__c</fullName>
        <description>Partner Operator Designation value based on the Partner Operator Type</description>
        <label>PO Designation</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Operator_Type__c</fullName>
        <label>Partner Operator Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Agent</fullName>
                </value>
                <value>
                    <fullName>Partner Operator</fullName>
                </value>
                <value>
                    <fullName>Terminal Operator</fullName>
                </value>
                <value>
                    <fullName>Acquisition</fullName>
                </value>
                <value>
                    <fullName>Employee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Operator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partner Operator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Portal_Contact_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is updated via a FLOW when the contact record is created as the result of an approved PCR
Not editable by users who have visibility rights to it.</description>
        <inlineHelpText>If this field is populated, it was created as a the result of the Portal Contact Request record that populates it.</inlineHelpText>
        <label>Portal Contact Request</label>
        <referenceTo>Portal_Contact_Request__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Preferred_Primary_Language__c</fullName>
        <label>Preferred/Primary Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Polish</fullName>
                </value>
                <value>
                    <fullName>Hindi</fullName>
                </value>
                <value>
                    <fullName>Chinese (Mandarin)</fullName>
                </value>
                <value>
                    <fullName>Chinese (Cantonese)</fullName>
                </value>
                <value>
                    <fullName>Arabic</fullName>
                </value>
                <value>
                    <fullName>Armenian</fullName>
                </value>
                <value>
                    <fullName>Bengali</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Greek</fullName>
                </value>
                <value>
                    <fullName>Hebrew</fullName>
                </value>
                <value>
                    <fullName>Hmong</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Panjabi</fullName>
                </value>
                <value>
                    <fullName>Persian</fullName>
                </value>
                <value>
                    <fullName>Portuguese</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
                <value>
                    <fullName>Tagalog</fullName>
                </value>
                <value>
                    <fullName>Urdu</fullName>
                </value>
                <value>
                    <fullName>Vietnamese</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Sales_Agent_Type__c</fullName>
        <inlineHelpText>Please select type of Sales Agent</inlineHelpText>
        <label>Primary Sales Agent Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Third Party Sales Agent</fullName>
                </value>
                <value>
                    <fullName>Independent Sales Agent</fullName>
                </value>
                <value>
                    <fullName>Non Soliciting Sales Agent</fullName>
                </value>
                <value>
                    <fullName>Employee Sales Agent</fullName>
                </value>
                <value>
                    <fullName>Delisted Independent Sales Agent</fullName>
                </value>
                <value>
                    <fullName>Delisted Third Party Sales Agent</fullName>
                </value>
                <value>
                    <fullName>Delisted Non-Soliciting Sales Agent</fullName>
                </value>
                <value>
                    <fullName>Delisted Employee Sales Agent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RM_s_email__c</fullName>
        <description>This field is meant to house the account&apos;s RM&apos;s email address in order to send them an alert when a portal contact/user is created as a result of the approval of a PCR (see flow: PCR Process)</description>
        <label>RM&apos;s email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Roles__c</fullName>
        <label>Roles</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Amusement Service</fullName>
                </value>
                <value>
                    <fullName>Bar Manager</fullName>
                </value>
                <value>
                    <fullName>Bartender</fullName>
                </value>
                <value>
                    <fullName>Key Decision Maker</fullName>
                </value>
                <value>
                    <fullName>Landlord</fullName>
                </value>
                <value>
                    <fullName>License Holder</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Old Owner</fullName>
                </value>
                <value>
                    <fullName>Owner/Fraternal Signatory</fullName>
                </value>
                <value>
                    <fullName>President</fullName>
                </value>
                <value>
                    <fullName>PSIC</fullName>
                </value>
                <value>
                    <fullName>Staff</fullName>
                </value>
                <value>
                    <fullName>Treasurer</fullName>
                </value>
                <value>
                    <fullName>Video Gaming Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SA_Agreement_Sent_Review__c</fullName>
        <label>SA Agreement Sent for Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SA_Agreement_Signed__c</fullName>
        <label>SA Agreement Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SA_Background_Check_Initiated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This denotes individuals who are going through the Sales Agent Registration Process, but are not officially Third Party/Independent Sales Agents yet.</description>
        <inlineHelpText>Mark if individual is not an official Third Party / Independent Sales Agent yet.</inlineHelpText>
        <label>SA Background Check Initiated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SA_Delisted__c</fullName>
        <label>SA Delisted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SA_Onboarding_Complete__c</fullName>
        <label>SA Onboarding Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SA_Registered__c</fullName>
        <label>SA Registered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SF_User_Role__c</fullName>
        <formula>SF_User__r.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Salesforce User Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Salesforce User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Agent_Documentation__c</fullName>
        <label>Sales Agent Documentation</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Background Check Disclosure and Authorization Form</fullName>
                </value>
                <value>
                    <fullName>Commission Split Form</fullName>
                </value>
                <value>
                    <fullName>ISA Registration Form</fullName>
                </value>
                <value>
                    <fullName>SA Packet</fullName>
                </value>
                <value>
                    <fullName>Driver&apos;s License</fullName>
                </value>
                <value>
                    <fullName>Recent Photo of Individual</fullName>
                </value>
                <value>
                    <fullName>Fingerprint Receipt</fullName>
                </value>
                <value>
                    <fullName>Original Release of Info</fullName>
                </value>
                <value>
                    <fullName>TPSA Agreement</fullName>
                </value>
                <value>
                    <fullName>ISA Agreement</fullName>
                </value>
                <value>
                    <fullName>Addendum to ASA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Agent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sales Agent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Secondary_Sales_Agent_Type__c</fullName>
        <label>Secondary Sales Agent Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Third Party Sales Agent</fullName>
                </value>
                <value>
                    <fullName>Independent Sales Agent</fullName>
                </value>
                <value>
                    <fullName>Non Soliciting Sales Agent</fullName>
                </value>
                <value>
                    <fullName>Employee Sales Agent</fullName>
                </value>
                <value>
                    <fullName>Delisted Independent Sales Agent</fullName>
                </value>
                <value>
                    <fullName>Delisted Non Soliciting Sales Agent</fullName>
                </value>
                <value>
                    <fullName>Delisted Third Party Sales Agent</fullName>
                </value>
                <value>
                    <fullName>Delisted Employee Sales Agent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Terminal_Operator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Terminal Operator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Third_Party_Sales_Agent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Third Party Sales Agent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accel Employee</fullName>
                </value>
                <value>
                    <fullName>Accounting Contact</fullName>
                </value>
                <value>
                    <fullName>Amusement Contact</fullName>
                </value>
                <value>
                    <fullName>Competitor Contact</fullName>
                </value>
                <value>
                    <fullName>Corporate Contact</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>IGB Contact</fullName>
                </value>
                <value>
                    <fullName>Partner Operator</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Sales Agent</fullName>
                </value>
                <value>
                    <fullName>Store Contact</fullName>
                </value>
                <value>
                    <fullName>TO Competitor Contact</fullName>
                </value>
                <value>
                    <fullName>Vendor</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                    <isActive>false</isActive>
                    <label>Competitor</label>
                </value>
                <value>
                    <fullName>Location</fullName>
                    <isActive>false</isActive>
                    <label>Location</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Employee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VP_Sales_Commission_Split_Approval__c</fullName>
        <inlineHelpText>VP of Sales Approval for Commission Split</inlineHelpText>
        <label>VP Sales Commission Split Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WFTrigger__c</fullName>
        <label>WFTrigger</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>license_number__c</fullName>
        <label>License #</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>Accel_Employees</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Partner_Operator__c</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>User__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Accel Employees</label>
    </listViews>
    <listViews>
        <fullName>Accel_Employees_Cleanup</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>SF_User__c</columns>
        <columns>SF_User_Role__c</columns>
        <columns>User__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>User__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>equals</operation>
            <value>Accel Entertainment (Contacts)</value>
        </filters>
        <filters>
            <field>SF_User__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.General</value>
        </filters>
        <label>Accel Employees Cleanup</label>
    </listViews>
    <listViews>
        <fullName>Accepted_Community_Terms</fullName>
        <columns>FULL_NAME</columns>
        <columns>Community_Terms_Accepted_Date__c</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Community_Terms_Accepted_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Accepted Community Terms</label>
    </listViews>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>Mail_Merge_Recipient__c</columns>
        <columns>Sales_Agent__c</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>IGB_Email_Contact__c</columns>
        <columns>Do_Not_Email__c</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>Account.DBA_Account_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>Community_Portal_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>Community_Terms_Accepted_Date__c</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.LAST_UPDATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Community_Contact__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>FULL_NAME</field>
            <operation>contains</operation>
            <value>Portal</value>
        </filters>
        <label>Community Portal Users</label>
    </listViews>
    <listViews>
        <fullName>Copy_of_Community_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>Community_Terms_Accepted_Date__c</columns>
        <columns>Community_Contact__c</columns>
        <columns>CONTACT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Community_Contact__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>FULL_NAME</field>
            <operation>notContain</operation>
            <value>DEMO</value>
        </filters>
        <label>AE Accelerator Users</label>
    </listViews>
    <listViews>
        <fullName>Corporate_Community_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>Community_Terms_Accepted_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Community_Contact__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>FULL_NAME</field>
            <operation>notContain</operation>
            <value>Demo</value>
        </filters>
        <filters>
            <field>FULL_NAME</field>
            <operation>notContain</operation>
            <value>Portal</value>
        </filters>
        <label>Corporate Community Users</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>Partner_Operators_List</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>External_Id__c</columns>
        <columns>Contact_UType__c</columns>
        <columns>Primary_Sales_Agent_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Partner_Operator__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Partner Operators</label>
    </listViews>
    <listViews>
        <fullName>Sales_Agents_List</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>Contact_UType__c</columns>
        <columns>Primary_Sales_Agent_Type__c</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>External_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Agent__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Sales Agents</label>
    </listViews>
    <listViews>
        <fullName>the_Copy_of_Community_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>Community_Terms_Accepted_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Community_Contact__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Community Users</label>
    </listViews>
    <recordTypes>
        <fullName>General</fullName>
        <active>true</active>
        <label>General</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cannot_Check_Inactive_if_Community_Conta</fullName>
        <active>true</active>
        <description>Except sys admins, users are not allowed to edit Inactive field if Community Contact = TRUE</description>
        <errorConditionFormula>AND(
$User.ProfileId &lt;&gt; &quot;00e1I000001NG0z&quot;,
Community_Contact__c = TRUE,
ISCHANGED( Inactive__c ))</errorConditionFormula>
        <errorMessage>Please reach out to @PortalSupport if this contact&apos;s portal access needs to be revoked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Primary_Sales_Agent</fullName>
        <active>true</active>
        <description>If the Contact User Type is Sales Agent, Please select the Primary Sales Agent Type</description>
        <errorConditionFormula>AND (
ISPICKVAL ( Contact_UType__c, &quot;Sales Agent&quot;),
ISPICKVAL (Primary_Sales_Agent_Type__c, &quot;&quot;)
)</errorConditionFormula>
        <errorMessage>Please select the Primary Sales Agent Type.</errorMessage>
    </validationRules>
</CustomObject>